--- a/AIMAE/src/main/webapp/css/login.css
+++ b/AIMAE/src/main/webapp/css/login.css
@@ -54,6 +54,23 @@ body {
     transition: background-color 0.3s ease;
 }
 
+.btn-2 {
+    border: 1px solid #c4c4c4 !important;
+    padding: 12px;
+    background-color: white !important;
+    color: black !important;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-2:hover {
+    background-color: rgb(194, 194, 194) !important;
+    color: white !important;
+}
+
 .login-form button:hover {
     background-color: pink;
     color: white;
