--- a/AIMAE/src/main/webapp/css/myPage.css
+++ b/AIMAE/src/main/webapp/css/myPage.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Pretendard-Regular', sans-serif;
+}
+
 /* index.css 또는 myPage.css에 추가 */
 .my-page-container {
     max-width: 1200px;
